add a header section in HTML file

--- a/index.html
+++ b/index.html
@@ -55,8 +55,22 @@
     </nav>
     <!--End of Logo & NavLinks-->
 
-
     <!--Header-->
+    <div class="header-content bg-image d-flex justify-content-center align-items-center" style="background-image: url('https://mdbootstrap.com/img/new/fluid/nature/015.jpg'); height: 100vh;
+    ">
+        <div class="header-content-inner text-center">
+            <h1 class="text-white" style="font-size:100px">Dramatically Engage
+            </h1>
+            <p class="lead text-white" style="font-size:20px">Objectively innovate empowered manufactured products
+                whereas parallel platforms."</p>
+            <a href="#" class="btn btn-warning btn-lg text-uppercase text-white rounded-pill">Engage Now</a>
+        </div>
+    </div>
+    </header>
+
+
+
+
     <!--End of Header-->
     <!--Section1-->
     <!--End of Section1-->
