added a section1 to HMTL file

--- a/index.html
+++ b/index.html
@@ -67,12 +67,27 @@
         </div>
     </div>
     </header>
-
-
-
-
     <!--End of Header-->
+
+
     <!--Section1-->
+    <section class="section1 p-5 bg-primary">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12 text-center mb-3">
+                    <i class="fab fa-apple fa-3x" style="color:white;"></i>
+                    <h1 class="text-white">Completely synergize resource taxing relationships</h1>
+                    <p class="lead text-white" style="font-size:16px">Professionally cultivate one-to-one customer
+                        serve
+                        with
+                        robust ideas. Dynamically
+                        innovate
+                        resource-leveling customer service for state of the art customer service</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!--End of Section1-->
     <!--Section2-->
     <!--End of Section2-->
