--- a/index.html
+++ b/index.html
@@ -87,32 +87,55 @@
             </div>
         </div>
     </section>
-
     <!--End of Section1-->
+
+
     <!--Section2-->
-    <!--End of Section2-->
-    <!--Section3-->
-    <!--End of Section3-->
-    <!--Section4-->
-    <!--End of Section4-->
-    <!--Section5-->
-    <!--End of Section5-->
-    <!--Footer-->
-    <!--End of Footer-->
-    <!--CopyR Section-->
-    <!--End of CopyR Section-->
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6 col-sm-12 pt-4 mb-4">
+                <img class="img-fluid" src="imgs/cameraTouch.jpeg" class="border rounded-cirlce" alt="" srcset="">
+            </div>
+            <div class="col-lg-6 col-sm-12 pt-4 mb-4 text-center">
+                <div class="div">
+                    <div class="pb-4">
+                        <h1 class="text-center">Best in Class</h1>
+                        <p class="lead text-center">Holisticly predominate extensible testing procedures for
+                            reliable
+                            supply chains.
+                            Dynamically
+                            innovate resource-leveling customer service for state of the art customer service.</p>
+                        <a href="#" class="btn btn-warning btn-lg text-uppercase text-white rounded-pill">Classify
+                            It</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--End of Section2-->
 
 
-    <!-- Javascript Bootstrap -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        crossorigin="anonymous"></script>
+        <!--Section3-->
+        <!--End of Section3-->
+        <!--Section4-->
+        <!--End of Section4-->
+        <!--Section5-->
+        <!--End of Section5-->
+        <!--Footer-->
+        <!--End of Footer-->
+        <!--CopyR Section-->
+        <!--End of CopyR Section-->
+
+
+        <!-- Javascript Bootstrap -->
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
