--- a/index.html
+++ b/index.html
@@ -136,6 +136,26 @@
 
 
             <!--Section4-->
+            <div class="container-fluid">
+                <div class="row">
+                    <a href="">
+                        <div class="col-md-4 promo-item item-1">
+                            <h3>Unleash</h3>
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="col-md-4 promo-item item-1">
+                            <h3>Synergize</h3>
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="col-md-4 promo-item item-1">
+                            <h3>Procrastinate</h3>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
             <!--End of Section4-->
             <!--Section5-->
             <!--End of Section5-->
