updated index.html and style.css

--- a/index.html
+++ b/index.html
@@ -138,21 +138,23 @@
             <!--Section4-->
             <div class="container-fluid">
                 <div class="row">
-                    <a href="">
-                        <div class="col-md-4 promo-item item-1">
-                            <h3>Unleash</h3>
-                        </div>
-                    </a>
-                    <a href="">
-                        <div class="col-md-4 promo-item item-1">
-                            <h3>Synergize</h3>
-                        </div>
-                    </a>
-                    <a href="">
-                        <div class="col-md-4 promo-item item-1">
-                            <h3>Procrastinate</h3>
-                        </div>
-                    </a>
+                    <div class="col-md-4 promo-item item-1">
+                        <a href="#">
+                            <h3 class="text-center"
+                                style="background-image: url(https://images.unsplash.com/photo-1451187580459-43490279c0fa?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=872&q=80)">
+                                Unleash</h3>
+                        </a>
+                    </div>
+                    <div class="col-md-4 promo-item item-2">
+                        <a href="#">
+                            <h3 class="text-center">Synergize</h3>
+                        </a>
+                    </div>
+                    <div class="col-md-4 promo-item item-3">
+                        <a href="#">
+                            <h3 class="text-center">Procrastinate</h3>
+                        </a>
+                    </div>
                 </div>
             </div>
 
