added section 5 to HTML file

--- a/index.html
+++ b/index.html
@@ -160,9 +160,28 @@
 
 
             <!--Section5-->
-
-
+            <section class="section5 p-5">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col text-center mb-3">
+                            <i class="fas fa-thumbtack fa-3x" style="color:blue;"></i>
+                            <h1 class="text-dark">Sanity Check</h1>
+                            <p class="lead text-dark" style="font-size:16px">Holisticly predominate extensible
+                                testing
+                                procedures for reliable supply chains. Dynamically innovate resource-leveling
+                                customer
+                                service
+                                for state of the art customer service.</p>
+                            <a href="#" class="btn btn-warning btn-lg text-uppercase text-white rounded-pill">Check
+                                Now</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <!--End of Section5-->
+
+
+
             <!--Footer-->
             <!--End of Footer-->
             <!--CopyR Section-->
