--- a/index.html
+++ b/index.html
@@ -180,10 +180,23 @@
             </section>
             <!--End of Section5-->
 
-
-
             <!--Footer-->
+            <footer class="footer bg-warning p-4">
+                <div class="container">
+                    <div class="row">
+                        <div class="col text-center">
+                            <h1 class="text-white">Contact Us</h1>
+                            <i class="fas fa-phone fa-3x p-3" style="color:white"></i>
+                            <p class="text-white">+1(23) 456 7890</p>
+                            <i class="fas fa-thumbtack fa-3x" style="color:white;"></i>
+                            <p class="text-white">info@example.com</p>
+                        </div>
+                    </div>
+                </div>
+            </footer>
             <!--End of Footer-->
+
+
             <!--CopyR Section-->
             <!--End of CopyR Section-->
 
