added a copyright section in HTML file

--- a/index.html
+++ b/index.html
@@ -198,6 +198,16 @@
 
 
             <!--CopyR Section-->
+            <section class="copyR  p-2">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col text-center">
+                            <p class=>Copyright <i class="fa fa-copyright" aria-hidden="true"></i>
+                                Example.com 2021</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <!--End of CopyR Section-->
 
 
