updated section 4 in HTML file

--- a/index.html
+++ b/index.html
@@ -111,116 +111,128 @@
                 </div>
             </div>
         </div>
-        <!--End of Section2-->
+    </div>
 
-        <!--Section3-->
+    <!--End of Section2-->
+
+    <!--Section3-->
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6 col-sm-12 pt-4 mb-4 text-center">
+                <h1>Superior Quality</h1>
+                <p>Holistically predominate extensible testing procedures for reliable supply chains.
+                    Dynamically
+                    innovate resource-leveling customer service for state of the art customer service.</p>
+                <a href="#" class="btn btn-warning btn-lg text-uppercase text-white rounded-pill">Test It</a>
+            </div>
+            <div class="col-lg-6 col-sm-12 pt-4 mb-4 text-center">
+                <div class="div">
+                    <div class="pb-4">
+                        <img class="img-fluid" src="imgs/cameraQ1.jpeg" class="border rounded-cirlce" alt="" srcset="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--End of Section3-->
+
+
+    <!--Section4-->
+    <section>
+        <div class="row g-0" id="box-search">
+            <div class="col-lg-4 col-sm-12">
+                <div class="thumbnail text-center">
+                    <img src="imgs/Unleashmilky-way_1401-347.jpeg" alt="" class="img-responsive">
+                    <div class="caption">
+                        <h2 class="text-white">Unleash</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-12">
+                <div class="thumbnail text-center">
+                    <img src="imgs/rock-band-silhouettes-stage-concert_1204-200.jpeg" alt="" class="img-responsive">
+                    <div class="caption">
+                        <h2 class="text-white">Synergize</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-12">
+                <div class="thumbnail text-center">
+                    <img src="imgs/young-millennial-student-searches-information-homework-writes-down-necessary-content-textbook-prepare-project-it-topic_273609-38712.jpeg"
+                        alt="" class="img-responsive">
+                    <div class="caption">
+                        <h2 class="text-white">Procrastinate</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--End of Section4-->
+
+
+    <!--Section5-->
+    <section class="section5 p-5">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col text-center mb-3">
+                    <i class="fas fa-thumbtack fa-3x" style="color:blue;"></i>
+                    <h1 class="text-dark">Sanity Check</h1>
+                    <p class="lead text-dark" style="font-size:16px">Holisticly predominate extensible
+                        testing
+                        procedures for reliable supply chains. Dynamically innovate resource-leveling
+                        customer
+                        service
+                        for state of the art customer service.</p>
+                    <a href="#" class="btn btn-warning btn-lg text-uppercase text-white rounded-pill">Check
+                        Now</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--End of Section5-->
+
+    <!--Footer-->
+    <footer class="footer bg-warning p-4">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 col-sm-12 pt-4 mb-4 text-center">
-                    <h1>Superior Quality</h1>
-                    <p>Holistically predominate extensible testing procedures for reliable supply chains.
-                        Dynamically
-                        innovate resource-leveling customer service for state of the art customer service.</p>
-                    <a href="#" class="btn btn-warning btn-lg text-uppercase text-white rounded-pill">Test It</a>
-                </div>
-                <div class="col-lg-6 col-sm-12 pt-4 mb-4 text-center">
-                    <div class="div">
-                        <div class="pb-4">
-                            <img class="img-fluid" src="imgs/cameraQ1.jpeg" class="border rounded-cirlce" alt=""
-                                srcset="">
-                        </div>
-                    </div>
+                <div class="col text-center">
+                    <h1 class="text-white">Contact Us</h1>
+                    <i class="fas fa-phone fa-3x p-3" style="color:white"></i>
+                    <p class="text-white">+1(23) 456 7890</p>
+                    <i class="fas fa-thumbtack fa-3x" style="color:white;"></i>
+                    <p class="text-white">info@example.com</p>
                 </div>
             </div>
-            <!--End of Section3-->
+        </div>
+    </footer>
+    <!--End of Footer-->
 
 
-            <!--Section4-->
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-md-4 item-1">
-                        <a href="#">
-                            <h3 class="text-center">
-                                Unleash</h3>
-                        </a>
-                    </div>
-                    <div class="col-md-4 item-2">
-                        <a href="#">
-                            <h3 class="text-center">Synergize</h3>
-                        </a>
-                    </div>
-                    <div class="col-md-4 item-3">
-                        <a href="#">
-                            <h3 class="text-center">Procrastinate</h3>
-                        </a>
-                    </div>
+    <!--CopyR Section-->
+    <section class="copyR  p-2">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col text-center">
+                    <p class=>Copyright <i class="fa fa-copyright" aria-hidden="true"></i>
+                        Example.com 2021</p>
                 </div>
             </div>
-            <!--End of Section4-->
+        </div>
+    </section>
+    <!--End of CopyR Section-->
 
 
-            <!--Section5-->
-            <section class="section5 p-5">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col text-center mb-3">
-                            <i class="fas fa-thumbtack fa-3x" style="color:blue;"></i>
-                            <h1 class="text-dark">Sanity Check</h1>
-                            <p class="lead text-dark" style="font-size:16px">Holisticly predominate extensible
-                                testing
-                                procedures for reliable supply chains. Dynamically innovate resource-leveling
-                                customer
-                                service
-                                for state of the art customer service.</p>
-                            <a href="#" class="btn btn-warning btn-lg text-uppercase text-white rounded-pill">Check
-                                Now</a>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <!--End of Section5-->
-
-            <!--Footer-->
-            <footer class="footer bg-warning p-4">
-                <div class="container">
-                    <div class="row">
-                        <div class="col text-center">
-                            <h1 class="text-white">Contact Us</h1>
-                            <i class="fas fa-phone fa-3x p-3" style="color:white"></i>
-                            <p class="text-white">+1(23) 456 7890</p>
-                            <i class="fas fa-thumbtack fa-3x" style="color:white;"></i>
-                            <p class="text-white">info@example.com</p>
-                        </div>
-                    </div>
-                </div>
-            </footer>
-            <!--End of Footer-->
-
-
-            <!--CopyR Section-->
-            <section class="copyR  p-2">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col text-center">
-                            <p class=>Copyright <i class="fa fa-copyright" aria-hidden="true"></i>
-                                Example.com 2021</p>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <!--End of CopyR Section-->
-
-
-            <!-- Javascript Bootstrap -->
-            <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-                integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-                crossorigin="anonymous"></script>
-            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-                integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-                crossorigin="anonymous"></script>
-            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-                integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-                crossorigin="anonymous"></script>
+    <!-- Javascript Bootstrap -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
