--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <!--End of Logo & NavLinks-->
 
     <!--Header-->
-    <div class="header-content bg-image d-flex justify-content-center align-items-center" style="background-image: url('https://mdbootstrap.com/img/new/fluid/nature/015.jpg'); height: 100vh;
+    <!-- <div class="header-content bg-image d-flex justify-content-center align-items-center" style="background-image: url('https://mdbootstrap.com/img/new/fluid/nature/015.jpg'); height: 100vh;
     ">
         <div class="header-content-inner text-center">
             <h1 class="text-white" style="font-size:100px">Dramatically Engage
@@ -66,15 +66,35 @@
             <a href="#" class="btn btn-warning btn-lg text-uppercase text-white rounded-pill">Engage Now</a>
         </div>
     </div>
-    </header>
+    </header> -->
     <!--End of Header-->
+
+    <!--Section1a-->
+    <section>
+        <div class="col">
+            <div class="bg-image p-5 text-center shadow-1-strong text-white"
+                style="background-image: url('https://mdbootstrap.com/img/new/slides/003.jpg');">
+                <h1 class="mb-2 text-center hOne">Dramatically Engage</h1>
+                <p class="lead text-white item1" style="font-size:20px">Objectively innovate empowered
+                    manufactured
+                    products
+                    whereas parallel platforms."</p>
+                <a href="#" class="btn btn-warning btn-lg text-uppercase text-white rounded-pill">Engage Now</a>
+            </div>
+        </div>
+    </section>
+    <!-- Section1a -->
+
+
+
+
 
 
     <!--Section1-->
-    <section class="section1 p-5 bg-primary">
+    <!-- <section class="section1 p-5 bg-primary">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-12 text-center mb-3">
+                <div class="col-lg-12 col-sm-12 text-center mb-3">
                     <i class="fab fa-apple fa-3x" style="color:white;"></i>
                     <h1 class="text-white">Completely synergize resource taxing relationships</h1>
                     <p class="lead text-white" style="font-size:16px">Professionally cultivate one-to-one customer
@@ -86,7 +106,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!--End of Section1-->
 
 
@@ -134,40 +154,76 @@
             </div>
         </div>
     </div>
-
     <!--End of Section3-->
 
 
-    <!--Section4-->
-    <section>
+    <!-- Section4 -->
+    <section class>
         <div class="row g-0" id="box-search">
-            <div class="col-lg-4 col-sm-12">
+
+            <div class="col-lg-4 col-md-12 col-sm-12 zoom-effect-container">
+                <div class="image-card">
+                    <img src="imgs/Unleashmilky-way_1401-347.jpeg" class="img-fluid" />
+                </div>
+                <div class="caption">
+                    <h2 class="text-white text text-center">Unleash</h2>
+                </div>
+            </div>
+
+
+
+            <div class="col-lg-4 col-md-12 col-sm-12 zoom-effect-container">
+                <div class="image-card">
+                    <img src="imgs/rock-band-silhouettes-stage-concert_1204-200.jpeg" class="img-fluid" />
+                </div>
+                <div class="caption">
+                    <h2 class="text-white text text-center">Synergize</h2>
+                </div>
+            </div>
+
+
+            <div class="col-lg-4 col-md-12 col-sm-12 zoom-effect-container">
+                <div class="image-card">
+                    <img src="imgs/procrastination2.jpeg" class="img-fluid" />
+                </div>
+                <div class="caption">
+                    <h2 class="text-white text-center">Procrastinate</h2>
+                </div>
+            </div>
+    </section>
+
+    <!-- End of Section4 -->
+
+    <!--Section4-->
+    <!-- <section class="Section4">
+        <div class="row g-0" id="box-search">
+            <div class="item1 col-lg-4 col-sm-12">
                 <div class="thumbnail text-center">
                     <img src="imgs/Unleashmilky-way_1401-347.jpeg" alt="" class="img-responsive">
                     <div class="caption">
-                        <h2 class="text-white">Unleash</h2>
+                        <h2 class="text-white item1">Unleash</h2>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-sm-12">
+            <div class="col-lg-4 col-sm-12 item2">
                 <div class="thumbnail text-center">
                     <img src="imgs/rock-band-silhouettes-stage-concert_1204-200.jpeg" alt="" class="img-responsive">
                     <div class="caption">
-                        <h2 class="text-white">Synergize</h2>
+                        <h2 class="text-white item1">Synergize</h2>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-sm-12">
+            <div class="col-lg-4 col-sm-12 item3">
                 <div class="thumbnail text-center">
                     <img src="imgs/young-millennial-student-searches-information-homework-writes-down-necessary-content-textbook-prepare-project-it-topic_273609-38712.jpeg"
                         alt="" class="img-responsive">
                     <div class="caption">
-                        <h2 class="text-white">Procrastinate</h2>
+                        <h2 class="text-white item1">Procrastinate</h2>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!--End of Section4-->
 
 
