--- a/index.html
+++ b/index.html
@@ -54,24 +54,22 @@
     </nav>
     <!--End of Logo & NavLinks-->
 
-    <!--Section1-->
-    <section>
-        <div class="col-sm-12">
-            <div class="bg-image p-5 text-center shadow-1-strong text-white"
-                style="background-image: url('https://mdbootstrap.com/img/new/slides/003.jpg');">
-                <h1 class="mb-2 text-center hOne">Dramatically Engage</h1>
-                <p class="lead text-white item1" style="font-size:20px">Objectively innovate empowered
-                    manufactured
-                    products
-                    whereas parallel platforms."</p>
-                <a href="#" class="btn btn-warning btn-lg text-uppercase text-white rounded-pill">Engage Now</a>
-            </div>
+    <!--Container1-->
+    <div class="container-fluid">
+        <div class="bg-image p-5 text-center shadow-1-strong text-white"
+            style="background-image: url('https://mdbootstrap.com/img/new/slides/003.jpg');">
+            <h1 class="mb-2 text-center hOne">Dramatically Engage</h1>
+            <p class="lead text-white item1" style="font-size:20px">Objectively innovate empowered
+                manufactured
+                products
+                whereas parallel platforms."</p>
+            <a href="#" class="btn btn-warning btn-lg text-uppercase text-white rounded-pill">Engage Now</a>
         </div>
-    </section>
-    <!-- Section1 -->
+    </div>
+    <!--End of Container1 -->
 
 
-    <!--Section2-->
+    <!--Container 2-->
     <div class="container">
         <div class="row">
             <div class="col-lg-6 col-sm-12 pt-4 mb-4">
@@ -93,10 +91,9 @@
             </div>
         </div>
     </div>
+    <!--End of Container2-->
 
-    <!--End of Section2-->
-
-    <!--Section3-->
+    <!--Container3-->
     <div class="container">
         <div class="row">
             <div class="col-lg-6 col-sm-12 pt-4 mb-4 text-center">
@@ -115,11 +112,11 @@
             </div>
         </div>
     </div>
-    <!--End of Section3-->
+    <!--End of Container3-->
 
 
-    <!-- Section4 -->
-    <section class>
+    <!-- Container4 -->
+    <div class="container-fluid">
         <div class="row g-0" id="box-search">
             <div class="col-lg-4 col-md-12 col-sm-12 zoom-effect-container">
                 <div class="image-card">
@@ -145,71 +142,55 @@
                     <h2 class="text-white text-center">Procrastinate</h2>
                 </div>
             </div>
-    </section>
-    <!-- End of Section4 -->
-
-    <!--Section5-->
-    <section class="section5 p-5">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col text-center mb-3">
-                    <i class="fas fa-thumbtack fa-3x" style="color:blue;"></i>
-                    <h1 class="text-dark">Sanity Check</h1>
-                    <p class="lead text-dark" style="font-size:16px">Holisticly predominate extensible
-                        testing
-                        procedures for reliable supply chains. Dynamically innovate resource-leveling
-                        customer
-                        service
-                        for state of the art customer service.</p>
-                    <a href="#" class="btn btn-warning btn-lg text-uppercase text-white rounded-pill">Check
-                        Now</a>
-                </div>
-            </div>
         </div>
-    </section>
-    <!--End of Section5-->
+        <!-- End of Container4 -->
 
-    <!--Footer-->
-    <footer class="footer bg-warning p-4">
-        <div class="container">
-            <div class="row">
-                <div class="col text-center">
-                    <h1 class="text-white">Contact Us</h1>
-                    <i class="fas fa-phone fa-3x p-3" style="color:white"></i>
-                    <p class="text-white">+1(23) 456 7890</p>
-                    <i class="fas fa-thumbtack fa-3x" style="color:white;"></i>
-                    <p class="text-white">info@example.com</p>
-                </div>
-            </div>
+        <!--Container5-->
+        <div class="container-fluid mb-3 text-center p-5">
+            <i class="fas fa-thumbtack fa-3x" style="color:blue;"></i>
+            <h1 class="text-dark">Sanity Check</h1>
+            <p class="lead text-dark" style="font-size:16px">Holisticly predominate extensible
+                testing
+                procedures for reliable supply chains. Dynamically innovate resource-leveling
+                customer
+                service
+                for state of the art customer service.</p>
+            <a href="#" class="btn btn-warning btn-lg text-uppercase text-white rounded-pill">Check
+                Now</a>
         </div>
-    </footer>
-    <!--End of Footer-->
+        <!--End of Container5-->
 
-
-    <!--CopyR Section-->
-    <section class="copyR  p-2">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col text-center">
-                    <p class=>Copyright <i class="fa fa-copyright" aria-hidden="true"></i>
-                        Example.com 2021</p>
-                </div>
+        <!--Footer-->
+        <footer class="footer bg-warning p-4">
+            <div class="container-fluid text-center">
+                <h1 class="text-white">Contact Us</h1>
+                <i class="fas fa-phone fa-3x p-3" style="color:white"></i>
+                <p class="text-white">+1(23) 456 7890</p>
+                <i class="fas fa-thumbtack fa-3x" style="color:white;"></i>
+                <p class="text-white">info@example.com</p>
             </div>
+        </footer>
+        <!--End of Footer-->
+
+
+        <!--CopyRight Container-->
+        <div class="container-fluid text-center p-4">
+            <p class=>Copyright <i class="fa fa-copyright" aria-hidden="true"></i>
+                Example.com 2021</p>
         </div>
-    </section>
-    <!--End of CopyR Section-->
+        <!--End of CopyRight Container-->
 
 
-    <!-- Javascript Bootstrap -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        crossorigin="anonymous"></script>
+        <!-- Javascript Bootstrap -->
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
